changes in shopbymedium related to asp-action

--- a/Views/Home/Shopbymedium.cshtml
+++ b/Views/Home/Shopbymedium.cshtml
@@ -147,47 +147,47 @@
                 <p class="text-center  py-3 fs-4">Paintings</p>
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-2">
-                <a asp-controller="home" asp-action="Drawing" asp-route-category="Drawing"> <img class="img-fluid"
+                <a asp-controller="home" asp-action="Painting" asp-route-category="Drawing"> <img class="img-fluid"
                         src="~/img/drawing.jpg" alt=""></a>
                 <p class="text-center py-3 fs-4">Drawing</p>
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-2">
-                <a asp-controller="home" asp-action="Origami" asp-route-category="Origami"> <img class="img-fluid"
+                <a asp-controller="home" asp-action="Painting" asp-route-category="Origami"> <img class="img-fluid"
                         src="~/img/origami.jpg" alt=""></a>
                 <p class="text-center py-3 fs-4">Origami</p>
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-2">
-                <a asp-controller="home" asp-action="String-Art asp-route-category="String-Art"> <img class="img-fluid"
+                <a asp-controller="home" asp-action="Painting" asp-route-category="String-Art"> <img class="img-fluid"
                         src="~/img/string_art.jpg" alt=""></a>
                 <p class="text-center py-3 fs-4">String-Art</p>
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-2">
-                <a asp-controller="home" asp-action="Sketch" asp-route-category="Sketch"> <img class="img-fluid"
+                <a asp-controller="home" asp-action="Painting" asp-route-category="Sketch"> <img class="img-fluid"
                         src="~/img/sketches.jpg" alt=""></a>
                 <p class="text-center py-3 fs-4">Sketch</p>
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-2">
-                <a asp-controller="home" asp-action="Room-Decor" asp-route-category="Room-Decor"> <img class="img-fluid"
+                <a asp-controller="home" asp-action="Painting" asp-route-category="Room-Decor"> <img class="img-fluid"
                         src="~/img/room_decor.jpg" alt=""></a>
                 <p class="text-center py-3 fs-4 ">Room-Decor</p>
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-2">
-                <a asp-controller="home" asp-action="Wall-Art" asp-route-category="Wall-Art"> <img class="img-fluid"
+                <a asp-controller="home" asp-action="Painting" asp-route-category="Wall-Art"> <img class="img-fluid"
                         src="~/img/room_decor.jpg" alt=""></a>
                 <p class="text-center py-3 fs-4 ">Wall-Art</p>
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-2">
-                <a asp-controller="home" asp-action="Pottery" asp-route-category="Pottery"> <img class="img-fluid"
+                <a asp-controller="home" asp-action="Painting" asp-route-category="Pottery"> <img class="img-fluid"
                         src="~/img/room_decor.jpg" alt=""></a>
                 <p class="text-center py-3 fs-4 ">Pottery</p>
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-2">
-                <a asp-controller="home" asp-action="Frame" asp-route-category="Frame"> <img class="img-fluid"
+                <a asp-controller="home" asp-action="Painting" asp-route-category="Frame"> <img class="img-fluid"
                         src="~/img/room_decor.jpg" alt=""></a>
                 <p class="text-center py-3 fs-4 ">Frame</p>
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-2">
-                <a asp-controller="home" asp-action="Any-Other" asp-route-category="Any-Other"> <img class="img-fluid"
+                <a asp-controller="home" asp-action="Painting" asp-route-category="Any-Other"> <img class="img-fluid"
                         src="~/img/room_decor.jpg" alt=""></a>
                 <p class="text-center py-3 fs-4 ">Any-Other</p>
             </div>
