dynamically added details in cart

--- a/Views/Home/Cart.cshtml
+++ b/Views/Home/Cart.cshtml
@@ -168,10 +168,8 @@
                             <td>
                                 <p>@ViewBag.item.Title</p>
                                 <p>By @ViewBag.artist.AccountName</p>
-                                <p>Painting on stretched canvas</p>
-                                <p>Finished edges </p>
-                                <p> Ready to hang</p>
-                                <p> 20'' h x 16'' w x .75'' d 1 lbs. 1 oz</p>
+                               <p class="mt-2 fs-5">@ViewBag.artistCollection.Description</p>
+                                    <p class="fs-5">@ViewBag.artistCollection.Size</p>
                             </td>
                             <td>Rs @ViewBag.item.Price</td>
                             <td>
