--- a/Views/Home/UploadArtwork.cshtml
+++ b/Views/Home/UploadArtwork.cshtml
@@ -48,13 +48,13 @@
                                         <option value="Painting">Painting</option>
                                         <option value="Drawing">Drawing</option>
                                         <option value="Origami">Origami</option>
-                                        <option value="String Art">String Art</option>
+                                        <option value="String-Art">String Art</option>
                                         <option value="Sketches">Sketches</option>
-                                        <option value="Room Decor">Room Decor</option>
-                                        <option value="Wall Art">Wall Art</option>
+                                        <option value="Room-Decor">Room Decor</option>
+                                        <option value="Wall-Art">Wall Art</option>
                                         <option value="Pottery">Pottery</option>
                                         <option value="Frame">Frame</option>
-                                        <option value="Any Other">Any Other</option>
+                                        <option value="Any-Other">Any Other</option>
                                     </select>
                                 </div>
                             </div>
