Dynamically added category names

--- a/Views/Home/Admin.cshtml
+++ b/Views/Home/Admin.cshtml
@@ -17,7 +17,7 @@
         </div>
         <div class="offcanvas-body">
           <div class="d-grid gap-2">
-            <a href="" class="btn border-0 btn-outline-dark mx-2 px-5 font2 ">Notifications</a>
+            @* <a href="" class="btn border-0 btn-outline-dark mx-2 px-5 font2 ">Notifications</a> *@
             <a href="" class="btn border-0 btn-outline-dark mx-2 px-5 font2 ">User List</a>
             <a href="" class="btn border-0 btn-outline-dark  px-5 mx-2 font2 ">Artist List</a>
             <a href="" class="btn border-0 btn-outline-dark  px-5 mx-2 font2 ">Message box</a>
