--- a/Views/Home/Painting.cshtml
+++ b/Views/Home/Painting.cshtml
@@ -132,7 +132,7 @@
   <div class="container pt-2">
     <div class="text-center my-5">
       <span class="font1 text-purple fw-bold heading  m-auto border-bottom border-dark border-3">
-        Paintings
+        @ViewBag.Category
       </span>
     </div>
     @* <div class="row text-center font2 mt-5">
