--- a/Views/Home/ContactUs.cshtml
+++ b/Views/Home/ContactUs.cshtml
@@ -10,12 +10,12 @@
                 <div class="col-lg-6 col-md-6 col-sm-12 col-12 login-section ">
                     <img src="~/img/painting1profile.jpg" class="img-fluid" alt="" style="height:100vh;">
                 </div>
-                <div class="col-lg-6 col-md-12 col-sm-12 col-12 mt-5 pt-5">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-12 mt-5 pt-5">
                     <div class="container pt-4 text-center">
-                        <a asp-controller="home" asp-action="index" class="navbar-brand font1 text-dark fw-bold fs-1 heading"><img src="~/img/logo.png"
+                        <a asp-controller="home" asp-action="index" class="navbar-brand font1 text-dark fw-bold heading1"><img src="~/img/logo.png"
                                 style="width: 3rem; height: 3rem;" alt=""> Contact Us</a>
                     </div>
-                    <div class="container" style="width: 65%;">
+                    <div class="container login-width" >
                         <form>
                             <div class="row py-2">
                                 <div>
