--- a/Views/Home/EditArtistProfile.cshtml
+++ b/Views/Home/EditArtistProfile.cshtml
@@ -12,10 +12,10 @@
                 <img src="~/img/painting1profile.jpg" class="img-fluid" alt="" style="height:100vh;">
             </div>
         </div>
-        <div class="col-lg-6 col-md-12 col-sm-12 col-12">
+        <div class="col-lg-6 col-md-6 col-sm-12 col-12">
             <div class="container pt-4 text-center">
                 <a asp-area="" asp-controller="Home" asp-action="Index"
-                   class="navbar-brand font1 text-dark fw-bold fs-1 heading">
+                   class="navbar-brand font1 text-dark fw-bold  heading1">
                     <img src="~/img/logo.png" class="me-3 mb-2" style="width: 3rem; height: 3rem;" alt="">Edit Profile
                 </a>
             </div>
