--- a/Views/Home/EditUserProfile.cshtml
+++ b/Views/Home/EditUserProfile.cshtml
@@ -14,9 +14,9 @@
                     <img src="~/img/painting1profile.jpg" class="img-fluid" alt="" style="height:100vh;">
                 </div>
             </div>
-            <div class="col-lg-6 col-md-12 col-sm-12 col-12">
+            <div class="col-lg-6 col-md-6 col-sm-12 col-12">
                 <div class="container pt-4 text-center">
-                    <a class="navbar-brand font1 text-dark fw-bold fs-1 heading" asp-area="" asp-controller="Home"
+                    <a class="navbar-brand font1 text-dark fw-bold  heading1" asp-area="" asp-controller="Home"
                         asp-action="Index">
                         <img src="~/img/logo.png" class="me-3 mb-2" style="width: 3rem; height: 3rem;" alt="">Edit
                         Profile
