--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -150,14 +150,14 @@
                 <div class="container bg1 position-absolute top-50 start-50">
                     <h1 class="text-dark font1 fw-bold">Shop For <br> The Art You'll Love</h1>
                     <a asp-controller="home" asp-action="Shopbymedium"
-                        class="btn btn1 shadow-none all-buttons border-0 btn-dark position-relative btn-lg mx-2 px-5 font2 ">Shop Now</a>
+                        class="btn btn1 shadow-none all-buttons border-0 btn-dark position-relative mx-2 px-5 font2 ">Shop Now</a>
                 </div>
             </div>
             <div class="carousel-item bg" style="background-image: url('/img/bg1.jpg');">
                 <div class="container bg2  position-absolute top-50 start-50">
                     <h1 class="text-dark font1 fw-bold">Create & Upload</h1>
                     <a asp-area="" asp-controller="Home" asp-action="UploadArtwork"
-                        class="btn btn1 shadow-none all-buttons border-0 btn-dark btn-lg position-relative px-5 mx-2  font2 ">Upload Now</a>
+                        class="btn btn1 shadow-none all-buttons border-0 btn-dark  position-relative px-5 mx-2  font2 ">Upload Now</a>
                 </div>
             </div>
         </div>
