--- a/Views/Home/Artist1.cshtml
+++ b/Views/Home/Artist1.cshtml
@@ -148,7 +148,7 @@
                     style="height: 220px; width: 220px;">
                 }
             </div>
-            <div class="col-lg-6 col-md-8 col-sm-12 col-12 font2 text-start position-relative">
+            <div class="pt-3 col-lg-6 col-md-8 col-sm-12 col-12 font2 text-start position-relative">
                 <h2 class=" font2">@ViewBag.Artist.AccountName</h2>
                 <p class="my-3  text-wrap">
                     @ViewBag.Artist.Bio
