--- a/Views/Home/CustomArtRequest.cshtml
+++ b/Views/Home/CustomArtRequest.cshtml
@@ -62,7 +62,7 @@
                 }
 
                 <li class="nav-item dropdown">
-                    <a class="nav-link  font2 mx-2 item-4 text-white active bottom-red" id="navbarDropdown"
+                    <a class="nav-link  font2 mx-2 item-4 text-white " id="navbarDropdown"
                         role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         PROFILE
                     </a>
@@ -119,7 +119,7 @@
                             <a asp-controller="home" asp-action="ArtistProfile"
                             class="nav-link font2 mx-2 item-6 text-white">ARTIST</a>
                             </li>*@
-                                <li><a class="nav-link font2 mx-2 item-6 text-white" asp-controller="home"
+                                <li><a class="nav-link font2 mx-2 item-6 text-white active bottom-pink" asp-controller="home"
                         asp-action="CustomArtRequest">ART REQUESTS</a></li>
                     }
 
