--- a/Views/Home/YourCustomRequest.cshtml
+++ b/Views/Home/YourCustomRequest.cshtml
@@ -150,12 +150,12 @@
                 </div>
 
                 <div class="col-lg-4 col-md-4  my-1">
-                    <h3 class="font2 fs-6 d-block pt-2">Artist</h3>
+                    <span class="font2 h5 d-block pt-2">Artist</span>
                     <span class="font2 fs-6 d-block pt-2">@requestArtist.AccountName</span>
                 </div>
 
                 <div class="col-lg-5 col-md-5 my-1">
-                    <label for="exampleFormControlTextarea1" class="form-label">
+                    <label for="exampleFormControlTextarea1" class="form-label fw-bold h5">
                         Customization details
                     </label>
                     <p>@item.Description</p>
