--- a/wwwroot/css/project.css
+++ b/wwwroot/css/project.css
@@ -226,7 +226,9 @@ new-address:checked {
   object-fit: cover;
   object-position: center;
 }
-
+ .navbar-nav {
+    display: inline-block;
+  }
 @media screen and (min-width: 250px) and (max-width: 450px) {
   .text-box {
     display: flex;
@@ -266,9 +268,7 @@ new-address:checked {
   .error-page {
     text-align: center;
   }
-  .navbar-nav {
-    display: inline-block;
-  }
+
   .error-page > img {
     height: 14rem;
   }
@@ -322,6 +322,7 @@ new-address:checked {
 @media screen and (min-width: 750px) and (max-width: 1800px) {
   .container > h1 {
     font-size: 4rem;
+      transform: translate(14%, -12%);
   }
   .heading1 {
     font-size: 2.5rem;
