--- a/Views/Home/Cart.cshtml
+++ b/Views/Home/Cart.cshtml
@@ -117,11 +117,12 @@
                 {
                     @if (await UserManager.IsInRoleAsync(UserManager.GetUserAsync(User).Result, "Artist"))
                     {
-                       @* <li class="nav-item">
+                        @* <li class="nav-item">
                             <a asp-controller="home" asp-action="ArtistProfile"
-                        class="nav-link font2 mx-2 item-6 text-white">ARTIST</a>
-                        </li>*@
-                          <li><a class="nav-link font2 mx-2 item-6 text-white" asp-controller="home" asp-action="CustomArtRequest">ART  REQUESTS</a></li>
+                            class="nav-link font2 mx-2 item-6 text-white">ARTIST</a>
+                            </li>*@
+                        <li><a class="nav-link font2 mx-2 item-6 text-white" asp-controller="home"
+                        asp-action="CustomArtRequest">ART REQUESTS</a></li>
                     }
 
                 }
@@ -135,14 +136,14 @@
     </div>
 </nav>
 <section class="my-5 py-5">
-    <div class="container pt-2">   
+    <div class="container pt-2">
         @if (ViewBag.checkout)
         {
             <div class="text-center my-5">
-            <span class="font1 text-orange fw-bold heading m-auto border-bottom border-dark border-3">
-                Shopping Cart
-            </span>
-        </div>
+                <span class="font1 text-orange fw-bold heading m-auto border-bottom border-dark border-3">
+                    Shopping Cart
+                </span>
+            </div>
             <div class="py-2 table-responsive-xxl">
                 <table class=" table shadow  table-borderless table-hover">
                     <thead>
@@ -168,8 +169,8 @@
                             <td>
                                 <p>@ViewBag.item.Title</p>
                                 <p>By @ViewBag.artist.AccountName</p>
-                               <p class="mt-2 fs-5">@ViewBag.artistCollection.Description</p>
-                                    <p class="fs-5">@ViewBag.artistCollection.Size</p>
+                                <p class="mt-2 fs-5">@ViewBag.item.Description</p>
+                                <p class="fs-5">@ViewBag.item.Size</p>
                             </td>
                             <td>Rs @ViewBag.item.Price</td>
                             <td>
@@ -191,15 +192,18 @@
                     <!-- <p class="text-end">Checkout</p> -->
             </div>
             </div>
-        }else{
+        }
+        else
+        {
             <div class="py-2">
-               <div class="text-center py-5">
-                         <h2 class="font2 text-dark fw-bold  mt-4 m-auto">
-                           Your Cart is empty !
-                        </h2>
-                        <img src="~/img/empty_wishlist.png" class="img-fluid py-3" style="height:17rem;" alt=""> <br>
-                        <a asp-action="Index" class="all-buttons btn shadow-none btn-outline-dark btn-lg font2 ">Continue Shopping</a>
-                    </div>
+                <div class="text-center py-5">
+                    <h2 class="font2 text-dark fw-bold  mt-4 m-auto">
+                        Your Cart is empty !
+                    </h2>
+                    <img src="~/img/empty_wishlist.png" class="img-fluid py-3" style="height:17rem;" alt=""> <br>
+                    <a asp-action="Index" class="all-buttons btn shadow-none btn-outline-dark btn-lg font2 ">Continue
+                        Shopping</a>
+                </div>
             </div>
         }
     </div>
@@ -207,7 +211,7 @@
 
 @*<style>
     .img-cover {
-        object-fit: cover;
-        object-position: center;
+    object-fit: cover;
+    object-position: center;
     }
-</style>*@
+    </style>*@
