--- a/Views/Home/UsersList.cshtml
+++ b/Views/Home/UsersList.cshtml
@@ -21,9 +21,12 @@
             <div class="offcanvas-body">
                 <div class="d-grid gap-2">
                     @* <a href="" class="btn border-0 btn-outline-dark mx-2 px-5 font2 ">Notifications</a> *@
-                    <a href="" class="btn border-0 btn-outline-dark mx-2 px-5 font2 ">User List</a>
-                    <a href="" class="btn border-0 btn-outline-dark  px-5 mx-2 font2 ">Artist List</a>
-                    <a href="" class="btn border-0 btn-outline-dark  px-5 mx-2 font2 ">Message box</a>
+                    <a asp-controller="Home" asp-action="UsersList" class="btn border-0 btn-dark mx-2 px-5 font2 ">User
+                        List</a>
+                    <a asp-controller="Home" asp-action="ArtistsList"
+                        class="btn border-0 btn-outline-dark px-5 mx-2 font2 ">Artist List</a>
+                    <a asp-controller="Home" asp-action="ArtRequestsList"
+                        class="btn border-0 btn-outline-dark  px-5 mx-2 font2 ">Art Requests</a>
                     @*<a href="" class="btn border-0 logout-offcanvas btn-outline-dark px-5 mx-2 font2 ">Logout</a>*@
                 </div>
             </div>
