--- a/Views/Home/UsersList.cshtml
+++ b/Views/Home/UsersList.cshtml
@@ -1,6 +1,9 @@
 @{
     ViewBag.HideFooter = true;
 }
+@{
+    ViewData["Title"] = "Users List";
+}
 <nav class="navbar navbar-light bg-light shadow">
     <div class="container">
         <a class="btn btn-dark" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
