--- a/Views/Home/Shopbymedium.cshtml
+++ b/Views/Home/Shopbymedium.cshtml
@@ -173,22 +173,22 @@
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-2">
                 <a asp-controller="home" asp-action="Painting" asp-route-category="Wall-Art"> <img class="img-fluid"
-                        src="~/img/room_decor.jpg" alt=""></a>
+                        src="~/img/WallArt.jpg" alt=""></a>
                 <p class="text-center py-3 fs-4 ">Wall-Art</p>
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-2">
                 <a asp-controller="home" asp-action="Painting" asp-route-category="Pottery"> <img class="img-fluid"
-                        src="~/img/room_decor.jpg" alt=""></a>
+                        src="~/img/pottery.jpg" alt=""></a>
                 <p class="text-center py-3 fs-4 ">Pottery</p>
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-2">
                 <a asp-controller="home" asp-action="Painting" asp-route-category="Frame"> <img class="img-fluid"
-                        src="~/img/room_decor.jpg" alt=""></a>
+                        src="~/img/Frame.jpg" alt=""></a>
                 <p class="text-center py-3 fs-4 ">Frame</p>
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-2">
                 <a asp-controller="home" asp-action="Painting" asp-route-category="Any-Other"> <img class="img-fluid"
-                        src="~/img/room_decor.jpg" alt=""></a>
+                        src="~/img/AnyOther.jpg" alt=""></a>
                 <p class="text-center py-3 fs-4 ">Any-Other</p>
             </div>
         </div>
