--- a/Views/Home/YourCustomRequest.cshtml
+++ b/Views/Home/YourCustomRequest.cshtml
@@ -150,7 +150,7 @@
                 </div>
 
                 <div class="col-lg-4 col-md-4  my-1">
-                    <span class="font2 h5 d-block pt-2">Artist</span>
+                    <span class="font2 h5 fw-bold d-block pt-2">Artist</span>
                     <span class="font2 fs-6 d-block pt-2">@requestArtist.AccountName</span>
                 </div>
 
