--- a/Views/Home/Cart.cshtml
+++ b/Views/Home/Cart.cshtml
@@ -200,7 +200,7 @@
                     <h2 class="font2 text-dark fw-bold  mt-4 m-auto">
                         Your Cart is empty !
                     </h2>
-                    <img src="~/img/empty_wishlist.png" class="img-fluid py-3" style="height:17rem;" alt=""> <br>
+                    <img src="~/img/trolley.png" class="img-fluid py-3" style="height:17rem;" alt=""> <br>
                     <a asp-action="Index" class="all-buttons btn shadow-none btn-outline-dark btn-lg font2 ">Continue
                         Shopping</a>
                 </div>
