edited forms and admin panel

--- a/Views/Home/Admin.cshtml
+++ b/Views/Home/Admin.cshtml
@@ -37,3 +37,9 @@
       </form>*@
   </div>
 </nav>
+<section class="sec4 py-5" id="artist-profile">
+  <div class="container pt-3 d-flex flex-column align-items-center justify-content-center">
+   <img src="~/img/logo.png" style="width:18rem" alt="">
+   <h1 class="font1 fw-bold mt-3">Store To Door</h1>
+  </div>
+</section>
