--- a/Views/Home/EditUser.cshtml
+++ b/Views/Home/EditUser.cshtml
@@ -131,6 +131,6 @@
         }
 
         <!-- Submit button -->
-        <button type="submit" class="btn btn-primary btn-block mb-4">Update</button>
+        @* <button type="submit" class="btn btn-primary btn-block mb-4">Update</button> *@
     </form>
 </div>
