--- a/Views/Home/CustomArt.cshtml
+++ b/Views/Home/CustomArt.cshtml
@@ -9,7 +9,7 @@
         <div class="col-lg-6 col-md-6 col-sm-12 col-12 login-section">
             <img src="~/img/painting1profile.jpg" class="img-fluid" alt="" style="height:100vh;">
         </div>
-        <div class="col-lg-6 col-md-6 col-sm-12 col-12 pt-5">
+        <div class="col-lg-6 col-md-12 col-sm-12 col-12 pt-5">
             <div class="container pt-4 text-center">
                 <a asp-controller="home" asp-action="index" class="navbar-brand font1 text-dark fw-bold  heading1 text-wrap">
                     <img src="~/img/logo.png" class="me-3 mb-2" style="width: 3rem; height: 3rem;" alt="">Request For
@@ -41,7 +41,7 @@
 
                             <div class="mb-3">
                                 <input type="hidden" name="ArtistId" value="@(ViewBag.ArtistId) ">
-                                <label for="exampleFormControlTextarea1" class="form-label" >
+                                <label for="exampleFormControlTextarea1" class="form-label mb-3" >
                                     Describe the artwork you want to buy including the size , style or any
                                     content idea.
                                 </label>
